<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="AX5000_P_0196" Id="{f2e757c5-c24e-40a5-9cf0-8cbc94261a94}">
    <Declaration><![CDATA[TYPE AX5000_P_0196 :
STRUCT
	Actual_lenght:UINT;
	Max_lenght:UINT;
	Numeration:UDINT;
	Denominator:UDINT;
	Mask:UDINT;
	Position_offset:UDINT;
	Data_valid:UINT;
//	{attribute 'hide'}
	rsvd:UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>